--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "gulp-headerfooter": "^1.0.3",
     "gulp-sass": "^3.1.0",
     "gulp-tinypng-compress": "^1.2.1",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "syncano-client": "^0.2.9"
   }
 }
