--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "aframe-text-geometry-component": "^0.5.1",
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
@@ -15,6 +16,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-tinypng-compress": "^1.2.1",
     "gulp-uglify": "^2.1.2",
-    "syncano-client": "^0.2.9"
+    "syncano-client": "^0.2.9",
+    "vivus": "^0.4.3"
   }
 }
